# umd-handle-django

./: .gitignore  Dockerfile  README.md  env_example  pyproject.toml
attribute-maps/: saml.py
docs/: DevelopmentEnvironmentLocal.md  EnvironmentBanner.md  TestPlan.md  umd-handle-open-api-v1.yml
docs/adr/: 0005-handle-patch-method.md
src/umd_handle/: auth.py  middleware.py  server.py  settings.py  urls.py
src/umd_handle/api/: admin.py  apps.py  models.py  urls.py  views.py
src/umd_handle/api/management/commands/: db_import_handles_from_csv.py  db_import_jwt_tokens_from_csv.py  jwt_list_tokens.py
src/umd_handle/api/migrations/: 0001_initial.py  0003_alter_handle_options_handle_created_handle_modified.py  0004_alter_jwttoken_options_jwttoken_created_and_more.py  0005_alter_handle_prefix.py  0006_alter_handle_repo.py  0007_alter_handle_options_and_more.py  0008_alter_handle_url.py
tests/umd_handle/: handle_validation_tests.py
tests/umd_handle/api/: handle_api_tests.py  handle_model_tests.py
tests/umd_handle/middleware/: jwt_auth_tests.py
